--- a/BodyBath/Bath & Body.html
+++ b/BodyBath/Bath & Body.html
@@ -1242,124 +1242,125 @@
                     </div>
                 </div>
             </div>
-            <div class="BAR">
-                Tools
-                <div class="drop">
-                    <div class="outsideTools">
-                        <div class="inside">
-                            <div><a href="">Popular Categories </a></div>
-                            <div><a href="">View All Tools </a></div>
-                            <div><a href="">Makeup Brushes & Accessories </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="">Hair Care </a></div>
-                            <div><a href=""> Hair Dryers </a></div>
-                            <div><a href="">Flat Irons </a></div>
-                            <div><a href="">Rollers & Curling Irons </a></div>
-                            <div><a href="">Hair Brushes </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="">Skincare </a></div>
-                            <div><a href="">LED Light Therapy </a></div>
-                            <div><a href="">Facial Toning </a></div>
-                            <div><a href="">Cleansing </a></div>
-                            <div><a href="">Dermabrasion</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="BAR">
-               <a href="Bath & Body.html"> Bath & Body
-            </a>
-                <div class="drop">
-                    <div class="outsideBath">
-                        <div class="inside">
-                            <div><a href="Bath & Body.html"> Popular Categories </a></div>
-                            <div><a href="Bath & shower.html"> View All Bath & Body </a></div>
-                            <div><a href="Body Bath Acceries.html">New In </a></div>
-                            <div><a href="papular category.html"> Clean Bath & Body </a></div>
-                            <div><a href="papular category.html">5* Rated Products </a></div>
-                            <div><a href="papular category.html">Travel Sizes </a></div>
-                            <div><a href="papular category.html"> At Home Spa </a></div>
-                            <div><a href="papular category.html">Deodorants </a></div>
-                            <div><a href="papular category.html">Gifts & Sets </a></div>
-                            <div><a href="papular category.html">Oral Care </a></div>
-                            <div><a href="papular category.html">Mom & Baby </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="Bath & shower.html">Bath & Shower </a></div>
-                            <div><a href="Bath & shower.html">Baths Oils/Soak </a></div>
-                            <div><a href="Bath & shower.html">Bath Salts </a></div>
-                            <div><a href="Bath & shower.html">Body Washes </a></div>
-                            <div><a href="Bath & shower.html">Cleansing Bars </a></div>
-                            <div><a href="Bath & shower.html">Exfoliators </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="selftanner.html">Self Tanners </a></div>
-                            <div><a href="selftanner.html">Accessories </a></div>
-                            <div><a href="selftanner.html">Pre-Tan Preparation </a></div>
-                            <div><a href="selftanner.html">Body Tanners </a></div>
-                            <div><a href="selftanner.html">Post Tanning </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="moisturizer.html">Moisturizers </a></div>
-                            <div><a href="Body Bath Acceries.html">Balms </a></div>
-                            <div><a href="moisturizer.html">Butters </a></div>
-                            <div><a href="moisturizer.html">Creams </a></div>
-                            <div><a href="moisturizer.html">Lotions </a></div>
-                            <div><a href="moisturizer.html">Oils </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="Bath & shower.html">Targeted Care </a></div>
-                            <div><a href="Bath & shower.html">Bust </a></div>
-                            <div><a href="Body Bath Acceries.html">Cellulite </a></div>
-                            <div><a href="Body Bath Acceries.html">Dry Skin </a></div>
-                            <div><a href="Body Bath Acceries.html">Hair Removal </a></div>
-                            <div><a href="Bath & shower.html">Hand & Foot Care </a></div>
-                            <div><a href="Body Bath Acceries.html">Hand Soap, Sanitizers & Creams </a></div>
-                            <div><a href="Body Bath Acceries.html">Legs </a></div>
-                            <div><a href="Body Bath Acceries.html">Slimming & Sculpting </a></div>
-                            <div><a href="Body Bath Acceries.html"> Stretch Marks </a></div>
-                            <div><a href="Body Bath Acceries.html">Sunscreen</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="BAR">
-                Self-Care
-                <div class="drop">
-                    <div class="outsideSelf">
-                        <div class="inside">
-                            <div><a href="">Popular Categories </a></div>
-                            <div><a href="">Self Care </a></div>
-                            <div><a href="">New In </a></div>
-                            <div><a href="">5* Rated Products </a></div>
-                            <div><a href="">At-Home Spa </a></div>
-                            <div><a href="">View All Wellness Products </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="">Sexual Wellness </a></div>
-                            <div><a href="">Devices </a></div>
-                            <div><a href="">Skin Care </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="">Supplements </a></div>
-                            <div><a href="">Skin </a></div>
-                            <div><a href=""> Hair </a></div>
-                            <div><a href="">Immune Boosting </a></div>
-                            <div><a href="">Health & Wellbeing </a></div>
-                            <div><a href="">Weight Loss </a></div>
-                        </div>
-                        <div class="inside">
-                            <div><a href="">Clean Beauty </a></div>
-                            <div><a href="">Clean Skincare </a></div>
-                            <div><a href=""> Clean Haircare </a></div>
-                            <div><a href="">Clean Makeup </a></div>
-                            <div><a href="">Clean Bath & Body</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           <!--  -->
+               <!-- Tools -->
+               <a href="../TOOL/Tools/Tools.html"> Tools </a>
+               <div class="drop">
+                   <div class="outsideTools">
+                       <div class="inside">
+                           <div><a href="../BodyBath/papular category.html">Popular Categories </a></div>
+                           <div><a href="../TOOL/Tools/ViewAllTool.html">View All Tools </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Makeup Brushes & Accessories </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Hair Care </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html"> Hair Dryers </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Flat Irons </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Rollers & Curling Irons </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Hair Brushes </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Skincare </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">LED Light Therapy </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Facial Toning </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Cleansing </a></div>
+                           <div><a href="../BodyBath/Body Bath Acceries.html">Dermabrasion</a></div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="BAR">
+             <a href="../BodyBath/Bath & Body.html"> Bath & Body</a>
+               <div class="drop">
+                   <div class="outsideBath">
+                       <div class="inside">
+                           <div><a href="../BodyBath/papular category.html"> Popular Categories </a></div>
+                           <div><a href="../BodyBath/papular category.html"> View All Bath & Body </a></div>
+                           <div><a href="../mostirizer/targeted page.html">New In </a></div>
+                           <div><a href="../mostirizer/targeted page.html"> Clean Bath & Body </a></div>
+                           <div><a href="../mostirizer/targeted page.html">5* Rated Products </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Travel Sizes </a></div>
+                           <div><a href="../mostirizer/targeted page.html"> At Home Spa </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Deodorants </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Gifts & Sets </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Oral Care </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Mom & Baby </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/Bath & shower.html">Bath & Shower </a></div>
+                           <div><a href="../BodyBath/Bath & shower.html">Baths Oils/Soak </a></div>
+                           <div><a href="../BodyBath/Bath & shower.html">Bath Salts </a></div>
+                           <div><a href="../BodyBath/Bath & shower.html">Body Washes </a></div>
+                           <div><a href="../BodyBath/Bath & shower.html">Cleansing Bars </a></div>
+                           <div><a href="../BodyBath/Bath & shower.html">Exfoliators </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/selftanner.html">Self Tanners </a></div>
+                           <div><a href="../BodyBath/selftanner.html">Accessories </a></div>
+                           <div><a href="../BodyBath/selftanner.html">Pre-Tan Preparation </a></div>
+                           <div><a href="../BodyBath/selftanner.html">Body Tanners </a></div>
+                           <div><a href="../BodyBath/selftanner.html">Post Tanning </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/moisturizer.html">Moisturizers </a></div>
+                           <div><a href="../BodyBath/selftanner.html">Balms </a></div>
+                           <div><a href="../BodyBath/selftanner.html">Butters </a></div>
+                           <div><a href="../BodyBath/moisturizer.html">Creams </a></div>
+                           <div><a href="../BodyBath/moisturizer.html">Lotions </a></div>
+                           <div><a href="../BodyBath/moisturizer.html">Oils </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../mostirizer/targeted page.html">Targeted Care </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Bust </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Cellulite </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Dry Skin </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Hair Removal </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Hand & Foot Care </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Hand Soap, Sanitizers & Creams </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Legs </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Slimming & Sculpting </a></div>
+                           <div><a href="../mostirizer/targeted page.html"> Stretch Marks </a></div>
+                           <div><a href="../mostirizer/targeted page.html">Sunscreen</a></div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="BAR">
+             <a href="../Selfcare/Self-Care.html"> Self-Care</a> 
+               <div class="drop">
+                   <div class="outsideSelf">
+                       <div class="inside">
+                           <div><a href="../BodyBath/papular category.html">Popular Categories </a></div>
+                           <div><a href="../BodyBath/papular category.html">Self Care </a></div>
+                           <div><a href="../BodyBath/papular category.html">New In </a></div>
+                           <div><a href="../BodyBath/papular category.html">5* Rated Products </a></div>
+                           <div><a href="../BodyBath/papular category.html">At-Home Spa </a></div>
+                           <div><a href="../BodyBath/papular category.html">View All Wellness Products </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/papular category.html">Sexual Wellness </a></div>
+                           <div><a href="../BodyBath/papular category.html">Devices </a></div>
+                           <div><a href="../BodyBath/papular category.html">Skin Care </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/papular category.html">Supplements </a></div>
+                           <div><a href="../BodyBath/papular category.html">Skin </a></div>
+                           <div><a href="../BodyBath/papular category.html"> Hair </a></div>
+                           <div><a href="../BodyBath/papular category.html">Immune Boosting </a></div>
+                           <div><a href="../BodyBath/papular category.html">Health & Wellbeing </a></div>
+                           <div><a href="../BodyBath/papular category.html">Weight Loss </a></div>
+                       </div>
+                       <div class="inside">
+                           <div><a href="../BodyBath/papular category.html">Clean Beauty </a></div>
+                           <div><a href="../BodyBath/papular category.html">Clean Skincare </a></div>
+                           <div><a href="../BodyBath/papular category.html"> Clean Haircare </a></div>
+                           <div><a href="../BodyBath/papular category.html">Clean Makeup </a></div>
+                           <div><a href="../BodyBath/papular category.html">Clean Bath & Body</a></div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <!--  -->
             <div class="BAR">
                 Fragrance
                 <div class="drop">
