--- a/brands/brands.html
+++ b/brands/brands.html
@@ -1500,25 +1500,25 @@ if (database == 0) {
         "block";
 }
 
-document.querySelector("#brand-link").addEventListener("click", brandLink);
+// document.querySelector("#brand-link").addEventListener("click", brandLink);
 
-function brandLink() {
-    window.location.href = "./brands/brands.html";
-}
-
-
-document.querySelector(".anniversaryLink").addEventListener("click", anniversaryLink);
-
-function anniversaryLink() {
-    window.location.href = "./brands/anniversary.html"
-}
+// function brandLink() {
+//     window.location.href = "./brands/brands.html";
+// }
 
 
-document.querySelector("#productSale").addEventListener("click", productSale);
+// document.querySelector(".anniversaryLink").addEventListener("click", anniversaryLink);
 
-function productSale() {
-window.location.href = "./brands/sale.html";
-}
+// function anniversaryLink() {
+//     window.location.href = "./brands/anniversary.html"
+// }
+
+
+// document.querySelector("#productSale").addEventListener("click", productSale);
+
+// function productSale() {
+// window.location.href = "./brands/sale.html";
+// }
 
 
 database.map(function(el, i, arr) {
