--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SkinStore:Premium Skin Care Online| Free Shipping Over $49 </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./new style luci/style.css" />
     <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
@@ -947,7 +947,7 @@
         </div>
     </div>
  <!-- <link rel="stylesheet" href="./brands/sale.html"> -->
- 
+   
     <!-- Footer Ends Here -->
 </body>
 
