--- a/TOOL/Tools/Tools.html
+++ b/TOOL/Tools/Tools.html
@@ -1467,7 +1467,7 @@
     <div class="top-left">
         <h1>TOOLS</h1>
         <p>Dreaming of soft skin and sleek hair without the salon visit? Prep your skin and hair for the colder months and achieve professional results in the comfort of your own home with tools you can trust.</p>
-        <button id="btn1">SHOP NOW</button>
+        <a href="../../BodyBath/moisturizer.html"> <button id="btn1">SHOP NOW</button></a>
 
     </div>
   </div>
@@ -1485,20 +1485,20 @@
     <p>Nutace has award-vwinningskin care devices that help rejuvenate and
         improve your appearance. 85% of users experienced improvements
         in facial contour and 80% of users said their skin telt smoother.</p>
-    <button id="btn2">SHOP NOW</button>
+        <a href="../../Selfcare/Suplemented.html"> <button id="btn2">SHOP NOW</button></a>
 </div>
   <div><img src="https://static.thcdn.com/images/small/webp/widgets/121-us/05/246978870_1231664717308137_8427232570128650590_n%281%29-043605.jpg"/>
     <h1>FOREO</h1>
     <p>
         Transform your skincare routine with the FOREO cleansingrange.</p>
-    <button id="btn2">SHOP NOW</button>
+        <a href="../../mostirizer/papular category.html"> <button id="btn2">SHOP NOW</button></a>
 </div>
   <div><img src="https://static.thcdn.com/images/small/webp/widgets/121-us/37/original-0224-STDCRE-32153-SS-BME-Skinstore-March-2022-Photography-Batching-Shot_15-500x500-062737.jpg"/>
     <h1>Brand of the Month: TriPollar</h1>
     <p>
         TriPollar uses clinical expertise to create home-use devices that
 encourage skin regeneration and enhance natural beauty.</p>
-    <button id="btn2">SHOP NOW</button>
+<a href="../../fragrance/SKINCARE.html">  <button id="btn2">SHOP NOW</button></a>
 </div>
   
 </div>
@@ -1509,20 +1509,20 @@ encourage skin regeneration and enhance natural beauty.</p>
     Accelerated Mask Treatment (Various
     Shades)</p>
     <p>$179.00</p>
-    <button id="btn4">SHOP NOW</button>
+    <a href="../../payment/payment.html"><button id="btn4">SHOP NOW</button></a>
     
 </div>
 <div><img src="https://static.thcdn.com/images/small/webp//productimg/480/480/12358556-1974888087906815.jpg"/>
 <p>TriPollar STOP X Device - Rose Gold</p>
 <p>$399.00</p>
 
-<button id="btn4" class="btn4">SHOP NOW</button>
+<a href="../../payment/payment.html"><button id="btn4" class="btn4">SHOP NOW</button></a>
 
 </div>
 <div><img src="https://static.thcdn.com/images/small/webp//productimg/480/480/13412103-7954902419048838.jpg"/>
 <p>Trophy Skin UitradermMD</p>
 <p>$349.00</p>
-<button id="btn4" class="btn4">SHOP NOW</button>
+<a href="../../payment/payment.html"><button id="btn4" class="btn4">SHOP NOW</button></a>
 
 </div>
 <div><img src="https://static.thcdn.com/images/small/webp//productimg/480/480/13327573-9704900285386594.jpg"/>
@@ -1530,7 +1530,7 @@ encourage skin regeneration and enhance natural beauty.</p>
     Facial Hair Remover and Eyebrow
     Trimmer</p>
     <p id="h2">$59.00</p> 
-    <button id="btn4" class="btn5">SHOP NOW</button> 
+    <a href="../../payment/payment.html"><button id="btn4" class="btn5"> SHOP NOW</button> </a>
         
 </div>
 </div>
@@ -1718,7 +1718,7 @@ encourage skin regeneration and enhance natural beauty.</p>
             <div id="pay">
                 <div id="paySecure">Pay securely with</div>
                 <div class="payments">
-                    <img src="./img/pay.png" alt="" />
+                    <img src="../img/pay.png" alt="" />
                 </div>
             </div>
         </div>
