--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                         </div>
                         <div class="inside">
                             <div><a href="">Hair Care </a></div>
-                            <div><a href=""> Hair Dryers </a></div>
+                            <div><a href="tool-hairdryer.html"> Hair Dryers </a></div>
                             <div><a href="">Flat Irons </a></div>
                             <div><a href="">Rollers & Curling Irons </a></div>
                             <div><a href="">Hair Brushes </a></div>
@@ -458,7 +458,7 @@
                             <div><a href="#">Exfoliators </a></div>
                         </div>
                         <div class="inside">
-                            <div><a href="#">Self Tanners </a></div>
+                            <div><a href="./Selfcare/Suplemented.html">Self Tanners </a></div>
                             <div><a href="#">Accessories </a></div>
                             <div><a href="#">Pre-Tan Preparation </a></div>
                             <div><a href="#">Body Tanners </a></div>
@@ -473,9 +473,9 @@
                             <div><a href="#">Oils </a></div>
                         </div>
                         <div class="inside">
-                            <div><a href="#">Targeted Care </a></div>
-                            <div><a href="#">Bust </a></div>
-                            <div><a href="#">Cellulite </a></div>
+                            <div><a href="TOOL/Tools/tool-hairdryer.html">Targeted Care </a></div>
+                            <div><a href="">Bust </a></div>
+                            <div><a href="">Cellulite </a></div>
                             <div><a href="#">Dry Skin </a></div>
                             <div><a href="#">Hair Removal </a></div>
                             <div><a href="#">Hand & Foot Care </a></div>
