--- a/mostirizer/moisturizer.html
+++ b/mostirizer/moisturizer.html
@@ -1298,7 +1298,9 @@ Enjoy the benefits of beautiful skin, and enjoy shopping our huge selection of b
 
     var price = document.createElement("h2");
     price.textContent = ele.price;
-
+    var anch= document.createElement("a");
+   anch.href="../cart/cart.html"
+   
     var quick = document.createElement("button");
     quick.textContent = "Quick Buy";
     quick.setAttribute("class", "btn");
@@ -1306,7 +1308,7 @@ Enjoy the benefits of beautiful skin, and enjoy shopping our huge selection of b
         quickBuy(ele)
     })
 
-    box.append(image, h4, bord, price, quick);
+    box.append(image, h4, bord, price, anch);
 
     document.querySelector("#container").append(box);
   });
