--- a/BodyBath/Bath & Body.html
+++ b/BodyBath/Bath & Body.html
@@ -1471,7 +1471,7 @@
                 Extensive range of luxurious body lotions, hand creams,
                 shower gels & more.
             </p>
-            <button>SHOP NOW</button>
+          <a href="..//BodyBath//Body Bath Acceries.html"> <button>SHOP NOW</button></a> 
         </div>
     </div>
     <div class="third">
