--- a/brands/brands.html
+++ b/brands/brands.html
@@ -738,10 +738,10 @@
         <div class="box3">
             <span><a href="/brands/sale.html">Caudalie</a></span>
             <span> <a href="/brands/anniversary.html">Chemistry Brand</a></span>
-            <span><a href="">ClarityRX</a></span>
-            <span><a href="">Colorescience</a></span>
-            <span><a href="">CosMedix</a></span>
-            <span><a href="">Curlsmith</a></span>
+            <span><a href="/brands/anniversary.html">ClarityRX</a></span>
+            <span><a href="/brands/brands.html">Colorescience</a></span>
+            <span><a href="/brands/sale.html">CosMedix</a></span>
+            <span><a href="/brands/anniversary.html">Curlsmith</a></span>
         </div>
     </div>
 
