--- a/payment/payment.html
+++ b/payment/payment.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="paymentdel.html"> -->
 </head>
+<!-- complete -->
 
 <body>
     <div class="header-section">
