--- a/brands/anniversary.html
+++ b/brands/anniversary.html
@@ -197,7 +197,7 @@
         <div id="thirdInneer">
             <div id="brand-link"> Brands</div>
             <div class="anniversaryLink">Anniversary Edit</div>
-            <div id="linkPagesPath"><a href="/brands/sale.html">Sale</a></div>
+            <div id="linkPagesPath"><a href="sale.html">Sale</a></div>
             <div class="BAR">
                 Build a Routine
                 <div class="drop">
