--- a/brands/sale.html
+++ b/brands/sale.html
@@ -198,7 +198,7 @@
         <div id="thirdInneer">
             <div id="brand-link"><a href="/brands/brands.html">Brands</a></div>
             <div class="anniversaryLink"><a href="/brands/anniversary.html"> Anniversary Edit</a></div>
-            <div id="productSale"><a href="/brands/sale.html">Sale</a></div>
+            <div id="productSale"><a href="sale.html">Sale</a></div>
             <div class="BAR">
                 Build a Routine
                 <div class="drop">
